--- a/display.css
+++ b/display.css
@@ -1,20 +1,16 @@
-# DISPLAY
+/*
+  DISPLAY
 
-  WHat is this? It's 2.8K of mobile-first display classes.
-  Set the desired display context on any element for any breakpoint.
+  Comprehensive set of mobile-first display classes.
+  Set the desired display type on any element for any breakpoint.
   Base class names are namespaced across three breakpoints:
 
-*  -ns = not-small (covers everything larger than mobile)
-*  -m  = medium
-*  -l  = large
+  -ns = not-small (covers everything larger than mobile)
+  -m  = medium
+  -l  = large
 
-## Install
-```
-npm install display.css --save-dev
-```
-or download the css on github and include in your project.
+*/
 
-```
   .dn {     display: none; }
   .di {     display: inline; }
   .db {     display: block; }
@@ -89,30 +85,4 @@ or download the css on github and include in your project.
   .df-l {     display: flex; }
   .dif-l {    display: inline-flex; }
 }
-
-```
-
-# License
-
-The MIT License (MIT)
-
-Copyright (c) 2014 @mrmrs
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in
-all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.
 
